name:               svejcar-dev
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.13.*
                  , hakyll-sass
                  , split
  ghc-options:      -threaded
  default-language: Haskell2010
