name:               svejcar-dev
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Svejcar.Dev.Tags
  build-depends:    base == 4.*
                  , blaze-html
                  , hakyll == 4.13.*
  default-language: Haskell2010

executable site
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.13.*
                  , hakyll-sass
                  , split
                  , svejcar-dev
  ghc-options:      -threaded
  default-language: Haskell2010
